migrate the rest